# ferrite-server

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml.example  install.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  container.yml  release.yml
.zed/: settings.json
docker/: config.toml  entrypoint.sh
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
src/: app.rs  config.rs  error.rs  logbuf.rs  main.rs  memstats.rs  setup.rs  test_support.rs  web.rs
src/api/: auth.rs  blocklist.rs  clients.rs  custom_records.rs  error.rs  ingress.rs  lists.rs  logs.rs  metrics.rs  middleware.rs  mod.rs  profiles.rs  proxy.rs  queries.rs  settings.rs  stats.rs  system.rs  tools.rs  update.rs
src/blocklist/: cache.rs  engine.rs  loader.rs  mod.rs  parser.rs  refresh.rs
src/clients/: mac.rs  mdns.rs  mod.rs  registry.rs  resolver.rs
src/dns/: cache.rs  custom.rs  handler.rs  mod.rs  resolver.rs  server.rs  types.rs
src/proxy/: alerts.rs  health.rs  http_host.rs  intercept.rs  mod.rs  probe.rs  rules.rs  sni.rs  stats.rs
src/proxy/egress/: direct.rs  evasion.rs  mod.rs  socks5.rs  wireguard.rs
src/proxy/egress/wireguard/: conf.rs  device.rs  mod.rs
src/snapshot/: mod.rs  restore.rs  save.rs
src/stats/: cpu_sampler.rs  live.rs  mod.rs  recent.rs  timeseries.rs  top_list.rs  writer.rs
src/storage/: mod.rs  redis.rs  schema.rs  sqlite.rs
src/updater/: checksum.rs  github.rs  mod.rs  server.rs  web.rs
src/upstream/: doh.rs  doq.rs  dot.rs  hickory_util.rs  mod.rs  plain.rs  pool.rs  stream.rs  tunneled.rs  zone_router.rs
